[package]
name = "wscan"
version = "0.1.0"
authors = ["shellrow <81893184+shellrow@users.noreply.github.com>"]
edition = "2018"
description = "Cross-platform web scan tool for content discovery and recon"
repository = "https://github.com/shellrow/wscan"
readme = "README.md"
keywords = ["web","security","scan","cli"]
categories = ["network-programming"]
license = "MIT"

[dependencies]
webscan = {git = "https://github.com/sempervictus/webscan", branch = "feature/content_byte_matching"}
clap = "2.33"
tokio = { version = "0.2", features = ["full"] }
regex = "1"
chrono = "0.4"
crossterm = "0.19"
sudo = "0.6"
dns-lookup = "1.0"
## Static build
# Add openssl-sys as a direct dependency so it can be cross compiled to
# x86_64-unknown-linux-musl using the "vendored" feature below
openssl-sys = "*"

[features]
# Force openssl-sys to staticly link in the openssl library.
# Necessary when cross compiling to x86_64-unknown-linux-musl.
vendored = ["openssl-sys/vendored"]

